--- a/proyectos-jeef/tarea.alex/estilos.css
+++ b/proyectos-jeef/tarea.alex/estilos.css
@@ -1,82 +1,10 @@
 body{
    overflow-y: scroll;
-  scroll-behavior: smooth;
-
-}
-
-
-#nombre{
-display: grid;
-grid-template-columns: 1fr;
-justify-content: center;
-align-items: center;
- background-image: 
- linear-gradient( 90deg, rgba(255, 0, 0, 0.057),
-  rgba(255, 255, 0, 0.468),
- rgba(0, 128, 0, 0.485));
- border: 10px solid rgb(135, 110, 75, 1) ;
- border-radius: 10px;
-
-
-}
-
-.card{
-display: flex;
-flex-direction: column;
-background-color: rgb (135, 110, 75, 1);
-margin: 5px;
-border-radius: 15px;
-justify-content: center;
-align-items: center;
-height: 95%;
-
-
-}
-
-
-.card2{
-    height: auto;    justify-content: center;
-align-items: center;
-
-
-}
-#imagen{
- height: 120px;
- width: 150px;
- margin: 0px;
- border-radius: 10px;
-
- 
-   }
-
-#ciudad{
-    font-size: 15px;
-    font-weight: bold;
- text-transform:uppercase;
-    text-decoration:underline;
-    text-shadow: 5px 5px 5px white;
-}
-
-#name{
-    font-size: 25px;
-    text-transform: capitalize;
-    text-decoration:underline;
-    text-shadow: 5px 5px 5px white;
-  
-}
-
-#link{
-   margin-bottom: 20px;
-
-}
-
-#link:hover {
-  background-color: rgb(243, 14, 14);
-  transform: scale(1.05);
-}
+  scroll-behavior: smooth;}
 
 @media (min-width:750px) and (max-width:1300px) {
-#nombre{
+
+.info2{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 justify-content: center;
@@ -87,9 +15,6 @@ align-items: center;
  rgba(0, 128, 0, 0.485));
  border: 10px solid rgb(135, 110, 75, 1) ;
  border-radius: 10px;
-
-
-
 
 }
 
@@ -111,6 +36,8 @@ margin: 20px;
 
 
 .card2{
+display: flex;
+
     height: auto;   
      justify-content: center;
 align-items: center;
@@ -127,6 +54,7 @@ align-items: center;
    }
 
 #ciudad{
+align-items: center;
     font-size: 15px;
     font-weight: bold;
  text-transform:uppercase;
@@ -137,6 +65,7 @@ align-items: center;
 }
 
 #name{
+align-items: center;
     font-size: 25px;
     text-transform: capitalize;
     text-decoration:underline;
@@ -161,4 +90,62 @@ align-items: center;
     
 }
 
+@media (min-width:300px) and (max-width:750px) {
+.info2{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+justify-content: center;
+align-items: center;
+ background-image: 
+ linear-gradient( 90deg, rgba(255, 0, 0, 0.057),
+  rgba(255, 255, 0, 0.468),
+ rgba(0, 128, 0, 0.485));
+ border: 10px solid rgb(135, 110, 75, 1) ;
+ border-radius: 10px;
+
+}
+
+.card{
+display: flex;
+flex-direction: column;
+background-color: rgb (135, 110, 75, 1);
+margin: 5px;
+border-radius: 15px;
+justify-content: center;
+align-items: center;
+height: 95%;
+width: auto;
+margin: 20px;
+
+
+
+}  
+
+
+#name {
+    font-size: 28px;  
+    text-transform: capitalize;
+    text-decoration: underline;
+    text-shadow: 5px 5px 5px white;
+    color: blue;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  #ciudad {
+    font-size: 18px; 
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-shadow: 5px 5px 5px white;
+    color: blue;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
+  #link {
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: blue;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+}
 
