--- a/proyectos-jeef/tarea.alex/estilos2.css
+++ b/proyectos-jeef/tarea.alex/estilos2.css
@@ -118,10 +118,11 @@ line-height: 20px;
 
 .botones{
 display: flex;
+width:50vw;
 flex-direction: column;
 margin-left: 10px;
-justify-content: center;
-align-items: center;
+justify-content: flex-start;
+align-items: flex-start;
 }
 
 .botones button {
@@ -395,6 +396,7 @@ align-items: center;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
   }
 }
+
 
 
 
