--- a/proyectos-jeef/tarea.alex/estilos.css
+++ b/proyectos-jeef/tarea.alex/estilos.css
@@ -2,7 +2,22 @@ body{
    overflow-y: scroll;
   scroll-behavior: smooth;}
 
-@media (min-width:750px) and (max-width:1350px) {
+@media (min-width:750px) and (max-width:1450px) {
+
+#nombre{
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+justify-content: center;
+align-items: center;
+ background-image: 
+ linear-gradient( 90deg, rgba(255, 0, 0, 0.057),
+  rgba(255, 255, 0, 0.468),
+ rgba(0, 128, 0, 0.485));
+ border: 10px solid rgb(135, 110, 75, 1) ;
+ border-radius: 10px;
+
+}
+
 
 .info2{
 display: grid;
@@ -24,8 +39,7 @@ flex-direction: column;
 background-color: rgb (135, 110, 75, 1);
 margin: 5px;
 border-radius: 15px;
-justify-content: center;
-align-items: center;
+justify-content: space-between;
 height: 95%;
 width: auto;
 margin: 20px;
@@ -35,15 +49,6 @@ margin: 20px;
 }
 
 
-.card2{
-display: flex;
-
-    height: auto;   
-     justify-content: center;
-align-items: center;
-
-
-}
 #imagen{
  height: 150px;
  width: 190px;
@@ -54,24 +59,34 @@ align-items: center;
    }
 
 #ciudad{
-align-items: center;
+
     font-size: 15px;
     font-weight: bold;
  text-transform:uppercase;
-    text-decoration:underline;
+   font-family: Arial, Helvetica, sans-serif;
     text-shadow: 5px 5px 5px white;
-    color: blue;
-        background-color:rgba(255, 255, 255, 0.1);
+  padding: 5px;
+    text-shadow: 5px 5px 5px white;
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+    text-align: center;
+     border-radius: 5px;
+   
 }
 
 #name{
 align-items: center;
-    font-size: 25px;
+    font-size:15px;
     text-transform: capitalize;
-    text-decoration:underline;
+  font-family: Arial, Helvetica, sans-serif;
     text-shadow: 5px 5px 5px white;
-  color: blue;
-    background-color:rgba(255, 255, 255, 0.1);
+padding: 5px;
+    text-shadow: 5px 5px 5px white;
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+   text-align: center;
+   margin-top: 10px;
+   border-radius: 5px;
   
 }
 
@@ -91,19 +106,27 @@ align-items: center;
 }
 
 @media (min-width:300px) and (max-width:750px) {
-.info2{
+body{
+  margin: 0;
+  box-sizing: border-box;
+}
+
+  #nombre{
 display: grid;
 grid-template-columns: repeat(2, 1fr);
-justify-content: center;
-align-items: center;
+margin: 0;
  background-image: 
  linear-gradient( 90deg, rgba(255, 0, 0, 0.057),
   rgba(255, 255, 0, 0.468),
  rgba(0, 128, 0, 0.485));
  border: 10px solid rgb(135, 110, 75, 1) ;
  border-radius: 10px;
+justify-content: center;
+align-items: center;
+max-width: 100%;
 
 }
+
 
 .card{
 display: flex;
@@ -111,34 +134,38 @@ flex-direction: column;
 background-color: rgb (135, 110, 75, 1);
 margin: 5px;
 border-radius: 15px;
+height: 100%;
+margin: 5px;
+width: 90%;
+gap: 10px;
 justify-content: center;
 align-items: center;
-height: 95%;
-width: auto;
-margin: 20px;
-
-
-
 }  
 
 
 #name {
-    font-size: 28px;  
+    font-size: 15px;  
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 5px;
     text-transform: capitalize;
-    text-decoration: underline;
+padding: 5px;
     text-shadow: 5px 5px 5px white;
-    color: blue;
-    background-color: rgba(255, 255, 255, 0.1);
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+
+  
+    
   }
 
   #ciudad {
-    font-size: 18px; 
+    font-size: 20px; 
+      font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-transform: uppercase;
-    text-decoration: underline;
     text-shadow: 5px 5px 5px white;
-    color: blue;
-    background-color: rgba(255, 255, 255, 0.1);
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+  
   }
 
   #link {
@@ -148,5 +175,75 @@ margin: 20px;
     background-color: rgba(255, 255, 255, 0.1);
   }
 }
+
+@media (min-width:300px) and (max-width:400px) {
+  body{
+  margin: 0;
+  box-sizing: border-box;
+}
+
+  #nombre{
+display: grid;
+grid-template-columns: 1fr;
+ background-image: 
+ linear-gradient( 90deg, rgba(255, 0, 0, 0.057),
+  rgba(255, 255, 0, 0.468),
+ rgba(0, 128, 0, 0.485));
+ border: 10px solid rgb(135, 110, 75, 1) ;
+ border-radius: 10px;
+justify-content: center;
+align-items: center;
+max-width: 100%;
+border-radius: 10px;
+padding-left: 10px;
+
+}
+
+
+.card{
+display: flex;
+flex-direction: column;
+background-color: rgb (135, 110, 75, 1);
+margin: 5px;
+border-radius: 15px;
+height: 100%;
+margin: 5px;
+width: 90%;
+gap: 10px;
+justify-content: center;
+align-items: center;
+}  
+
+
+#name {
+    font-size: 15px;  
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 5px;
+    text-transform: capitalize;
+padding: 5px;
+    text-shadow: 5px 5px 5px white;
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+
+  
+    
+  }
+
+  #ciudad {
+    font-size: 20px; 
+      font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px white;
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+  
+  }
+
+
+}
+
+
+
 
 
