--- a/proyectos-jeef/tarea.alex/estilos2.css
+++ b/proyectos-jeef/tarea.alex/estilos2.css
@@ -1,5 +1,8 @@
 @media (min-width: 300px) and (max-width:750px) {
-
+body{
+ max-width: 100%;
+max-height: 100%;
+}
  #back {
     display: flex;
     align-items: center;
@@ -20,8 +23,8 @@
    .info2{
 display: flex;
 flex-direction: column;
-max-width: 100%;
-max-height: 100%;
+width: 100%;
+height: 100%;
 margin: 0;
 }
 .card2{
@@ -400,6 +403,7 @@ align-items: center;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
   }
 }
+
 
 
 
