--- a/proyectos-jeef/tarea.alex/estilos2.css
+++ b/proyectos-jeef/tarea.alex/estilos2.css
@@ -217,7 +217,21 @@ align-items: center;
     text-align: center;
     background: linear-gradient(135deg, #dbeafe, #f3f4f6);
   }
-
+ #back {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: #0077b6;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    margin: 10px;
+  }
 
   .info2 {
     display: flex;
@@ -388,6 +402,7 @@ align-items: center;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
   }
 }
+
 
 
 
